# wapc-rs

./: rust-toolchain.toml
crates/wapc/: Cargo.toml  README.md
crates/wapc-guest/: Cargo.toml
crates/wapc-guest/src/: errors.rs  lib.rs  prelude.rs  protocol.rs
crates/wapc-pool/src/: hostpool.rs
crates/wapc/src/: errors.rs  lib.rs  wapc_functions.rs  wapchost.rs
crates/wapc/src/wapchost/: modulestate.rs  traits.rs
crates/wasmtime-provider/: Cargo.toml  README.md
crates/wasmtime-provider/examples/: wasmtime-demo.rs
crates/wasmtime-provider/src/: engine_provider.rs  errors.rs  lib.rs  wapc_link.rs  wapc_store.rs  wapc_wasmtime.rs  wasi.rs
crates/wasmtime-provider/tests/: hello.rs  stress_test.rs  wapc_guest.rs
wasm/crates/wapc-guest-test/: Cargo.toml  Makefile  codegen.yaml
wasm/crates/wapc-guest-test/src/: custom_gen.rs  lib.rs
