[package]
name = "wapc"
version = "1.0.0"
authors = [
  "Kevin Hoffman <alothien@gmail.com>",
  "Jarrod Overson <jsoverson@gmail.com>",
  "Phil Kedy <phil.kedy@gmail.com>",
]
edition = "2021"
description = "An engine-pluggable WebAssembly Host Runtime implementing the waPC protocol."
license = "Apache-2.0"
homepage = "https://wapc.io"
documentation = "https://docs.rs/wapc"
readme = "README.md"
keywords = ["sdk", "wapc", "webassembly", "wasm", "wasi"]
categories = ["wasm", "api-bindings"]

[package.metadata.workspaces]
independent = true

[dependencies]
parking_lot = "0.12"
thiserror = "1.0"
futures-core = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
strum = { version = "0.24", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
