[package]
name = "wasmtime-provider"
version = "1.0.0"
authors = [
  "Kevin Hoffman <alothien@gmail.com>",
  "Jarrod Overson <jsoverson@gmail.com>",
  "Phil Kedy <phil.kedy@gmail.com>",
]
edition = "2021"
description = "A wasmtime engine provider for the waPC host"
license = "Apache-2.0"
homepage = "https://wapc.io"
documentation = "https://docs.rs/wasmtime-provider"
readme = "README.md"
keywords = ["sdk", "wapc", "webassembly", "wasm", "wasmtime"]
categories = ["wasm", "api-bindings"]

[package.metadata.workspaces]
independent = true

[badges.maintenance]
status = "actively-developed"

[features]
default = ["wasi"]
cache = ["wasmtime/cache"]
wasi = ["wasi-common", "wasmtime-wasi"]

[dependencies]
wapc = { path = "../wapc", version = "1.0.0" }
tracing = "0.1"
wasmtime = "0.39.1"
thiserror = "1.0"
cfg-if = "1.0.0"
parking_lot = "0.12"
futures-core = "0.3"
once_cell = "1.13"

tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

# feature = wasi
wasmtime-wasi = { version = "0.39.1", optional = true, features = ["sync"] }
wasi-common = { version = "0.39.1", optional = true }

[dev-dependencies]
wapc-codec = { path = "../wapc-codec" }
env_logger = "0.9"
tokio = { version = "1", features = ["macros", "time"] }
test-log = "0.2.10"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
futures = "0.3"
